--- a/Basic Front End Development Projects/Portfolio/index.html
+++ b/Basic Front End Development Projects/Portfolio/index.html
@@ -125,7 +125,7 @@
   <!-- Portfolio -->
   <section class="portfolio" id="portfolio">
     <h1>Portfolio</h1>
-    <p>My upcoming projects will be here!</p>
+    <p>Here are some of my most recent Projects!</p>
     <div class="container">
 
       <!-- Example row of columns -->
@@ -133,21 +133,26 @@
         <div class="col-md-3">
           <div class="well">
             <a href="http://codepen.io/Rafase282/full/yNmerP/" class="thumbnail">
-              <img src="http://dev.tealseagull.com/Rafael/img/Screenshot%202015-08-25%2001.39.17.png" alt="Project 1">
+              <img src="http://i.imgur.com/ICz7uDv.png" alt="Project 1">
               <h2 class="gray-text">Random Quote Generator</h2>
             </a>
-            <p class="gray-text">This site will display random quotes using the <a href="http://forismatic.com/" target="_blank" style="color: orange">Forismatic</a> API. You will then have the option to tweet it and share with others. You might need to edit the the psot
-              before summiting as some quotes will go over the limit. </p>
+            <p class="gray-text">This site will display random quotes using the <a href="http://forismatic.com/" target="_blank" style="color: orange">Forismatic</a> API. You will then have the option to tweet it and share with others. You might need to edit the the post
+              before summiting as some quotes will go over the limit.</p>
+            <p class="gray-text">
+              <strong>Technologies used:</strong> HTML5, CSS3, Boostrap3, jQuery2</p>
           </div>
         </div>
         <div class="col-md-3">
           <div class="well">
             <a href="#" class="thumbnail">
-              <img src="http://dev.tealseagull.com/Rafael/img/sports-h-c-171-180-6.jpg" alt="Project 2">
-              <h2 class="gray-text">Project Title</h2>
+              <img src="http://i.imgur.com/NVnCJK9.jpg" alt="Project 2">
+              <h2 class="gray-text">Local Weather App</h2>
             </a>
-            <p class="gray-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-              irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p class="gray-text">This site will get your location from your IP adress using the <a href="http://ip-api.com" target="_blank" style="color: orange">IP-API.com</a> API. The use that information to get the current weather and other basic infomration using the
+              <a href="http://openweathermap.org/" target="_blank" style="color: orange">OpenWeatherMap</a> API. The user has the option to display the weather and wind speed using the Metric or Imperial system. It also changes backgroudn image depending
+              onthe temperature.</p>
+            <p class="gray-text">
+              <strong>Technologies used:</strong> HTML5, CSS3, Boostrap3, jQuery2</p>
           </div>
         </div>
         <div class="col-md-3">
