Edits and progress

--- a/Basic Front End Development Projects/Portfolio/index.html
+++ b/Basic Front End Development Projects/Portfolio/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Rafase282</title>
   <link rel='stylesheet prefetch' href='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css'>
   <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css'>
@@ -132,7 +133,7 @@
       <div class="row">
         <div class="col-md-3">
           <div class="well">
-            <a href="http://codepen.io/Rafase282/full/yNmerP/" class="thumbnail">
+            <a href="http://codepen.io/Rafase282/full/yNmerP/" class="thumbnail" target='_blank'>
               <img src="http://i.imgur.com/ICz7uDv.png" alt="Project 1">
               <h2 class="gray-text">Random Quote Generator</h2>
             </a>
@@ -144,7 +145,7 @@
         </div>
         <div class="col-md-3">
           <div class="well">
-            <a href="#" class="thumbnail">
+            <a href="http://codepen.io/Rafase282/full/eNqKao" class="thumbnail" target='_blank'>
               <img src="http://i.imgur.com/NVnCJK9.jpg" alt="Project 2">
               <h2 class="gray-text">Local Weather App</h2>
             </a>
@@ -157,7 +158,7 @@
         </div>
         <div class="col-md-3">
           <div class="well">
-            <a href="#" class="thumbnail">
+            <a href="#" class="thumbnail" target='_blank'>
               <img src="http://dev.tealseagull.com/Rafael/img/technics-h-c-171-180-1.jpg" alt="Project 3">
               <h2 class="gray-text">Project Title</h2>
             </a>
@@ -167,7 +168,7 @@
         </div>
         <div class="col-md-3">
           <div class="well">
-            <a href="#" class="thumbnail">
+            <a href="#" class="thumbnail" target='_blank'>
               <img src="http://dev.tealseagull.com/Rafael/img/technics-h-c-171-180-10.jpg" alt="Project 4">
               <h2 class="gray-text">Project Title</h2>
             </a>
@@ -181,43 +182,51 @@
 
   <!-- Contact -->
   <section class="contact" id="contact">
-    <div class="contact-info">
+    <div class="contact-info container">
       <h1>Contact Me</h1>
 
       <!-- Twitter feed widget -->
-      <div id="twitter-feed" align="center">
-        <a class="twitter-timeline" href="https://twitter.com/Rafase282" data-widget-id="634855727186767876">Tweets by @Rafase282</a>
+      <div class="row" id="twitter-feed" align="center">
+        <div class="col-md-12">
+          <a class="twitter-timeline" href="https://twitter.com/Rafase282" data-widget-id="634855727186767876">Tweets by @Rafase282</a>
+        </div>
       </div>
 
       <!-- social media buttons -->
-      <div class="social" align="center">
-        <div class="btn-group-vertical">
+      <div class="social row" align="center">
+        <div class="btn-group-vertical col-xs-6 col-md-2">
           <a href="mailto:rafase282@gmail.com">
             <button type="button" class="btn btn-primary"><i class="fa fa-envelope fa-fw"></i> E-mail
             </button>
           </a>
+        </div>
+        <div class="btn-group-vertical col-xs-6 col-md-2">
           <a href="https://github.com/Rafase282" target='_blank'>
             <button type="button" class="btn btn-primary"><i class="fa fa-github fa-fw"></i> GitHub
             </button>
           </a>
         </div>
-        <div class="btn-group-vertical">
+        <div class="btn-group-vertical col-xs-6 col-md-2">
           <a href="https://www.linkedin.com/in/rafase282" target='_blank'>
             <button type="button" class="btn btn-primary"><i class="fa fa-linkedin"></i> LinkedIn
             </button>
           </a>
+        </div>
+        <div class="btn-group-vertical col-xs-6 col-md-2">
           <a href="http://codepen.io/Rafase282" target='_blank'>
             <button type="button" class="btn btn-primary"><i class="fa fa-codepen"></i> CodePen
             </button>
           </a>
         </div>
-        <div class="btn-group-vertical">
-          <a href="http://www.freecodecamp.com/rafase282" target='_blank'>
-            <button type="button" class="btn btn-primary"><i class="fa fa-fire fa-fw"></i> FreeCodeCamp
-            </button>
-          </a>
+        <div class="btn-group-vertical col-xs-6 col-md-2">
           <a href="https://rafase282.wordpress.com/" target='_blank'>
             <button type="button" class="btn btn-primary"><i class="fa fa-wordpress"></i> WordPress
+            </button>
+          </a>
+        </div>
+        <div class="btn-group-vertical col-xs-6 col-md-2">
+          <a href="http://www.freecodecamp.com/rafase282" target='_blank'>
+            <button type="button" class="btn btn-primary"><i class="fa fa-fire fa-fw"></i> FreeCodeCamp
             </button>
           </a>
         </div>
