Work in progress

--- a/Basic Front End Development Projects/Pomodoro Clock/index.html
+++ b/Basic Front End Development Projects/Pomodoro Clock/index.html
@@ -41,14 +41,22 @@
     </div>
 
     <div class="row top-row text-primary">
-      <button type="button" class="circle">
-        <h2>Session</h2>
+      <div class="well">
+        <h2 id="status">Work!</h2>
+        <br>
         <div id="timer">
-          <span id="hour">0</span>:
+          <span id="hour">00</span>:
           <span id="min">25</span>:
           <span id="sec">00</span>
         </div>
-
+      </div>
+    </div>
+    <div class="row top-row text-primary">
+      <button type="button" id="start"> Start
+      </button>
+      <button type="button" id="pause"> Pause
+      </button>
+      <button type="button" id="clear"> Clear
       </button>
     </div>
 
