--- a/Basic Front End Development Projects/Pomodoro Clock/index.html
+++ b/Basic Front End Development Projects/Pomodoro Clock/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Pomodoro Clock</title>
   <link rel='stylesheet prefetch' href='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css'>
   <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css'>
@@ -20,10 +21,10 @@
 
     <div class="row top-row">
       <div class="col-xs-6 text-primary">
-        <h4>Break Length</h4>
+        <h3>Break Length</h3>
       </div>
       <div class="col-xs-6 text-primary">
-        <h4>Session Length</h4>
+        <h3>Session Length</h3>
       </div>
     </div>
 
@@ -51,7 +52,7 @@
         </div>
       </div>
     </div>
-    <div class="row top-row text-primary">
+    <div class="row top-row text-primary bottom">
       <button type="button" id="start"> Start
       </button>
       <button type="button" id="pause"> Pause
