--- a/Basic Front End Development Projects/Pomodoro Clock/index.html
+++ b/Basic Front End Development Projects/Pomodoro Clock/index.html
@@ -57,7 +57,7 @@
       </button>
       <button type="button" id="pause"> Pause
       </button>
-      <button type="button" id="clear"> Clear
+      <button type="button" id="stop"> Stop
       </button>
     </div>
 
