--- a/Basic Front End Development Projects/Pomodoro Clock v2/index.html
+++ b/Basic Front End Development Projects/Pomodoro Clock v2/index.html
@@ -7,12 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel='stylesheet prefetch' href='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css'>
   <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css'>
-
   <link rel="stylesheet" href="css/style.css">
-
-
-
-
 </head>
 
 <body>
@@ -47,15 +42,9 @@
     </div>
 
     <div class="row top-row text-primary">
-      <div class="well">
-        <h2 id="status">Work!</h2>
-        <br>
-        <div id="timer">
-          <span id="hour">00</span>:
-          <span id="min">25</span>:
-          <span id="sec">00</span>
-        </div>
-      </div>
+      <h2 id="status">Work!</h2>
+      <canvas id="progress"></canvas>
+      <div id="timer"></div>
     </div>
     <div class="row top-row text-primary bottom">
       <button type="button" id="start"> Start
