Still not completed

--- a/Basic Front End Development Projects/Pomodoro Clock/index.html
+++ b/Basic Front End Development Projects/Pomodoro Clock/index.html
@@ -42,14 +42,12 @@
     </div>
 
     <div class="row top-row text-primary">
-      <div class="well">
-        <h2 id="status">Work!</h2>
-        <br>
-        <div id="timer">
-          <span id="hour">00</span>:
-          <span id="min">25</span>:
-          <span id="sec">00</span>
-        </div>
+      <h2 id="status">Work!</h2>
+      <canvas id="progress"></canvas>
+      <div id="timer">
+        <span id="hour">00</span>:
+        <span id="min">25</span>:
+        <span id="sec">00</span>
       </div>
     </div>
     <div class="row top-row text-primary bottom">
@@ -57,7 +55,7 @@
       </button>
       <button type="button" id="pause"> Pause
       </button>
-      <button type="button" id="stop"> Stop
+      <button type="button" id="clear"> Clear
       </button>
     </div>
 
