--- a/Basic Front End Development Projects/Pomodoro Clock v2/index.html
+++ b/Basic Front End Development Projects/Pomodoro Clock v2/index.html
@@ -51,7 +51,7 @@
       </button>
       <button type="button" id="pause"> Pause
       </button>
-      <button type="button" id="stop"> Stop
+      <button type="button" id="stop"> Reset
       </button>
     </div>
 
@@ -60,6 +60,7 @@
   <footer>
     <p>Copyright © Rafael J. Rodriguez 2015. All Rights Reserved</p>
   </footer>
+
   <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
   <script src='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js'></script>
   <script src="js/index.js"></script>
