--- a/Basic Front End Development Projects/Pomodoro Clock v2/index.html
+++ b/Basic Front End Development Projects/Pomodoro Clock v2/index.html
@@ -51,7 +51,7 @@
       </button>
       <button type="button" id="pause"> Pause
       </button>
-      <button type="button" id="stop"> Reset
+      <button type="button" id="reset"> Reset
       </button>
     </div>
 
