--- a/Basic Front End Development Projects/Portfolio/index.html
+++ b/Basic Front End Development Projects/Portfolio/index.html
@@ -134,7 +134,7 @@
         <div class="col-md-3">
           <div class="well">
             <a href="http://codepen.io/Rafase282/full/yNmerP/" class="thumbnail" target='_blank'>
-              <img src="http://i.imgur.com/ICz7uDv.png" alt="Project 1">
+              <img src="http://i.imgur.com/ICz7uDv.png" alt="Random Quotes">
               <h2 class="gray-text">Random Quote Generator</h2>
             </a>
             <p class="gray-text">This site will display random quotes using the <a href="http://forismatic.com/" target="_blank" style="color: orange">Forismatic</a> API. You will then have the option to tweet it and share with others. You might need to edit the the post
@@ -146,7 +146,7 @@
         <div class="col-md-3">
           <div class="well">
             <a href="http://codepen.io/Rafase282/full/eNqKao" class="thumbnail" target='_blank'>
-              <img src="http://i.imgur.com/NVnCJK9.jpg" alt="Project 2">
+              <img src="http://i.imgur.com/NVnCJK9.jpg" alt="Local Weather">
               <h2 class="gray-text">Local Weather App</h2>
             </a>
             <p class="gray-text">This site will get your location from your IP adress using the <a href="http://ip-api.com" target="_blank" style="color: orange">IP-API.com</a> API. The use that information to get the current weather and other basic infomration using the
@@ -158,12 +158,13 @@
         </div>
         <div class="col-md-3">
           <div class="well">
-            <a href="#" class="thumbnail" target='_blank'>
-              <img src="http://dev.tealseagull.com/Rafael/img/technics-h-c-171-180-1.jpg" alt="Project 3">
-              <h2 class="gray-text">Project Title</h2>
+            <a href="http://codepen.io/Rafase282/full/bVNmbP/" class="thumbnail" target='_blank'>
+              <img src="http://i.imgur.com/zSS2lMC.png" alt="Pomodoro Timer">
+              <h2 class="gray-text">Pomodoro Timer</h2>
             </a>
-            <p class="gray-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-              irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p class="gray-text">This web app is great for productivity, it can sit in any corner of your screen, there is not even the need to keep it in view. Once you set the amount of time you want to work and how long you want to rest for, then just let it run and it will keep looking until you stop it. You are also able to pause it in case you have to step aside from your work for a brief moment. It has a nice progression animation to let you know how much time you have left and the break and work progress animation have different color to help you figure out in which one you should be if needed.</p>
+              <p class="gray-text">
+                <strong>Technologies used:</strong> HTML5, CSS3, Boostrap3, jQuery2, Canvas</p>
           </div>
         </div>
         <div class="col-md-3">
