--- a/Basic Front End Development Projects/Twitch Status/index.html
+++ b/Basic Front End Development Projects/Twitch Status/index.html
@@ -2,65 +2,64 @@
 <html>
 
 <head>
-
-  <meta charset="UTF-8">
-  <title>Twitch-Status</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel='stylesheet prefetch' href='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css'>
-  <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css'>
-  <link rel="stylesheet" href="css/style.css">
-
+    <meta charset="UTF-8">
+    <title>Twitch-Status</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel='stylesheet prefetch' href='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css'>
+    <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css'>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-
-  <section>
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-sm-2 col-xs-1"></div>
-        <div class="col-sm-8 col-xs-10">
-          <ul class="nav nav-tabs">
-            <li class="active"><a data-toggle="tab" href="#home">All</a></li>
-            <li><a data-toggle="tab" href="#menu1">Online</a></li>
-            <li><a data-toggle="tab" href="#menu2">Offline</a></li>
-          </ul>
-          <div class="tab-content">
-            <form action="" class="search-form">
-              <div class="form-group has-feedback">
-                <label for="search" class="sr-only">Search</label>
-                <input type="text" class="form-control" name="search" id="search" placeholder="search">
-                <span class="glyphicon glyphicon-search form-control-feedback"></span>
-              </div>
-            </form>
-            <div id="home" class="tab-pane fade in active">
-              <h3>All Streams</h3>
-              <div>
-                <ul class="list"></ul>
-              </div>
+    <section>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-sm-4 col-xs-1"></div>
+                <div class="col-sm-4 col-xs-10">
+                    <ul class="nav nav-tabs">
+                        <li class="active"><a data-toggle="tab" href="#home">All</a></li>
+                        <li><a data-toggle="tab" href="#menu1">Online</a></li>
+                        <li><a data-toggle="tab" href="#menu2">Offline</a></li>
+                    </ul>
+                    <div class="tab-content">
+                        <form action="" class="search-form">
+                            <div class="form-group has-feedback">
+                                <label for="search" class="sr-only">Search</label>
+                                <input type="text" class="form-control" name="search" id="search" placeholder="search">
+                                <span class="glyphicon glyphicon-search form-control-feedback"></span>
+                            </div>
+                        </form>
+                        <div id="home" class="tab-pane fade in active">
+                            <h3>All Streams</h3>
+                            <div>
+                                <ul class="list"></ul>
+                            </div>
+                        </div>
+                        <div id="menu1" class="tab-pane fade">
+                            <h3>Online Channels</h3>
+                            <div>
+                                <ul class="list2"></ul>
+                            </div>
+                        </div>
+                        <div id="menu2" class="tab-pane fade">
+                            <h3>Offline Channels</h3>
+                            <div>
+                                <ul class="list3"></ul>
+                            </div>
+                        </div>
+                        <div class="col-sm-4 col-xs-1"></div>
+                    </div>
+                </div>
             </div>
-            <div id="menu1" class="tab-pane fade">
-              <h3>Menu 1</h3>
-              <p>Some content in menu 1.</p>
-            </div>
-            <div id="menu2" class="tab-pane fade">
-              <h3>Menu 2</h3>
-              <p>Some content in menu 2.</p>
-            </div>
-            <div class="col-sm-2 col-xs-1"></div>
-          </div>
         </div>
-      </div>
-    </div>
-  </section>
-  <!-- The footer -->
-  <footer>
-    Copyright © Rafael J. Rodriguez 2015. All Rights Reserved
-  </footer>
-
-  <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-  <script src='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js'></script>
-  <script src="js/index.js"></script>
-
+    </section>
+    <!-- The footer -->
+    <footer>
+        Copyright © Rafael J. Rodriguez 2015. All Rights Reserved
+    </footer>
+    <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+    <script src='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js'></script>
+    <script src="js/index.js"></script>
 </body>
 
 </html>
