Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -249,6 +249,25 @@
 </ol>
 
 <h2>
+<a id="object-oriented-and-functional-programming" class="anchor" href="#object-oriented-and-functional-programming" aria-hidden="true"><span class="octicon octicon-link"></span></a>Object Oriented and Functional Programming</h2>
+
+<ol>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Declare-JavaScript-Objects-as-Variables">Declare JavaScript Objects as Variables</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Construct-JavaScript-Objects-with-Functions">Construct JavaScript Objects with Functions</a></li>
+<li>[Make Object Properties Private]</li>
+<li>[Make Instances of Objects with a Constructor Function]</li>
+<li>[Iterate over Arrays with .map]</li>
+<li>[Condense arrays with .reduce]</li>
+<li>[Filter Arrays with .filter]</li>
+<li>[Sort Arrays with .sort]</li>
+<li>[Reverse Arrays with .reverse]</li>
+<li>[Concatenate Strings with .concat]</li>
+<li>[Split Strings with .split]</li>
+<li>[Join Strings with .join]</li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Functional-Programming-in-JavaScript">Functional Programming in JavaScript</a></li>
+</ol>
+
+<h2>
 <a id="basic-front-end-development-projects" class="anchor" href="#basic-front-end-development-projects" aria-hidden="true"><span class="octicon octicon-link"></span></a>Basic Front End Development Projects</h2>
 
 <ol>
@@ -284,25 +303,6 @@
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Bonfire-Binary-Agents">Binary Agents</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Bonfire-Everything-Be-True">Everything Be True</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Bonfire-Arguments-Optional">Arguments Optional</a></li>
-</ol>
-
-<h2>
-<a id="object-oriented-and-functional-programming" class="anchor" href="#object-oriented-and-functional-programming" aria-hidden="true"><span class="octicon octicon-link"></span></a>Object Oriented and Functional Programming</h2>
-
-<ol>
-<li>Declare JavaScript Objects as Variables</li>
-<li>Construct JavaScript Objects with Functions</li>
-<li>Make Object Properties Private</li>
-<li>Make Instances of Objects with a Constructor Function</li>
-<li>Iterate over Arrays with .map</li>
-<li>Condense arrays with .reduce</li>
-<li>Filter Arrays with .filter</li>
-<li>Sort Arrays with .sort</li>
-<li>Reverse Arrays with .reverse</li>
-<li>Concatenate Strings with .concat</li>
-<li>Split Strings with .split</li>
-<li>Join Strings with .join</li>
-<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Functional-Programming-in-JavaScript">Functional Programming in JavaScript</a></li>
 </ol>
 
 <h2>
