--- a/Basic Front End Development Projects/Twitch Status/index.html
+++ b/Basic Front End Development Projects/Twitch Status/index.html
@@ -17,9 +17,9 @@
         <div class="col-sm-4 col-xs-1"></div>
         <div class="col-sm-4 col-xs-10">
           <ul class="nav nav-tabs">
-            <li class="active"><a data-toggle="tab" href="#home">All</a></li>
-            <li><a data-toggle="tab" href="#menu1">Online</a></li>
-            <li><a data-toggle="tab" href="#menu2">Offline</a></li>
+            <li class="active"><a data-toggle="tab" href="#all">All</a></li>
+            <li><a data-toggle="tab" href="#online">Online</a></li>
+            <li><a data-toggle="tab" href="#offline">Offline</a></li>
           </ul>
           <div class="tab-content">
             <form action="" class="search-form">
@@ -29,19 +29,19 @@
                 <span class="glyphicon glyphicon-search form-control-feedback"></span>
               </div>
             </form>
-            <div id="home" class="tab-pane fade in active">
+            <div id="all" class="tab-pane fade in active">
               <h3>All Streams</h3>
               <div>
                 <ul class="list"></ul>
               </div>
             </div>
-            <div id="menu1" class="tab-pane fade">
+            <div id="online" class="tab-pane fade">
               <h3>Online Channels</h3>
               <div>
                 <ul class="list2"></ul>
               </div>
             </div>
-            <div id="menu2" class="tab-pane fade">
+            <div id="offline" class="tab-pane fade">
               <h3>Offline Channels</h3>
               <div>
                 <ul class="list3"></ul>
