Added new info.

--- a/Basic Front End Development Projects/Portfolio/index.html
+++ b/Basic Front End Development Projects/Portfolio/index.html
@@ -162,19 +162,23 @@
               <img src="http://i.imgur.com/zSS2lMC.png" alt="Pomodoro Timer">
               <h2 class="gray-text">Pomodoro Timer</h2>
             </a>
-            <p class="gray-text">This web app is great for productivity, it can sit in any corner of your screen, there is not even the need to keep it in view. Once you set the amount of time you want to work and how long you want to rest for, then just let it run and it will keep looking until you stop it. You are also able to pause it in case you have to step aside from your work for a brief moment. It has a nice progression animation to let you know how much time you have left and the break and work progress animation have different color to help you figure out in which one you should be if needed.</p>
-              <p class="gray-text">
-                <strong>Technologies used:</strong> HTML5, CSS3, Boostrap3, jQuery2, Canvas</p>
+            <p class="gray-text">This web app is great for productivity, it can sit in any corner of your screen, there is not even the need to keep it in view. Once you set the amount of time you want to work and how long you want to rest for, then just let it run and it
+              will keep looking until you stop it. You are also able to pause it in case you have to step aside from your work for a brief moment. It has a nice progression animation to let you know how much time you have left and the break and work progress
+              animation have different color to help you figure out in which one you should be if needed.</p>
+            <p class="gray-text">
+              <strong>Technologies used:</strong> HTML5, CSS3, Boostrap3, jQuery2, Canvas</p>
           </div>
         </div>
         <div class="col-md-3">
           <div class="well">
-            <a href="#" class="thumbnail" target='_blank'>
-              <img src="http://dev.tealseagull.com/Rafael/img/technics-h-c-171-180-10.jpg" alt="Project 4">
-              <h2 class="gray-text">Project Title</h2>
+            <a href="http://codepen.io/Rafase282/full/ZbGRzG/" class="thumbnail" target='_blank'>
+              <img src="http://i.imgur.com/Oy0Wcj4.pngg" alt="Project 4">
+              <h2 class="gray-text">Twitchtv JSON API</h2>
             </a>
-            <p class="gray-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-              irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p class="gray-text">This app will use the Twitch TV JSON API and display a list of accounts, if they are closed it will display the right symbols and mention that the account has been closed, the same for offline and online streams. It will also display online
+              and offline streams on a different tab and has a global search function that display results as you type while hiding anything that is not part of the match using regular expressions.</p>
+            <p class="gray-text">
+              <strong>Technologies used:</strong> HTML5, CSS3, Boostrap3, jQuery2.</p>
           </div>
         </div>
       </div>
