Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -254,16 +254,16 @@
 <ol>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Declare-JavaScript-Objects-as-Variables">Declare JavaScript Objects as Variables</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Construct-JavaScript-Objects-with-Functions">Construct JavaScript Objects with Functions</a></li>
-<li>[Make Object Properties Private]</li>
-<li>[Make Instances of Objects with a Constructor Function]</li>
-<li>[Iterate over Arrays with .map]</li>
-<li>[Condense arrays with .reduce]</li>
-<li>[Filter Arrays with .filter]</li>
-<li>[Sort Arrays with .sort]</li>
-<li>[Reverse Arrays with .reverse]</li>
-<li>[Concatenate Strings with .concat]</li>
-<li>[Split Strings with .split]</li>
-<li>[Join Strings with .join]</li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Make-Object-Properties-Private">Make Object Properties Private</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Make-Instances-of-Objects-with-a-Constructor-Function">Make Instances of Objects with a Constructor Function</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Iterate-over-Arrays-with-map">Iterate over Arrays with .map</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Condense-arrays-with-reduce">Condense arrays with .reduce</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Filter-Arrays-with-filter">Filter Arrays with .filter</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Sort-Arrays-with-sort">Sort Arrays with .sort</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Reverse-Arrays-with-reverse">Reverse Arrays with .reverse</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Concatenate-Strings-with-concat">Concatenate Strings with .concat</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Split-Strings-with-split">Split Strings with .split</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Join-Strings-with-join">Join Strings with .join</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Functional-Programming-in-JavaScript">Functional Programming in JavaScript</a></li>
 </ol>
 
