Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -326,8 +326,8 @@
 <a id="automated-testing-and-debugging" class="anchor" href="#automated-testing-and-debugging" aria-hidden="true"><span class="octicon octicon-link"></span></a>Automated Testing and Debugging</h2>
 
 <ol>
-<li>Waypoint: Use the Javascript Console</li>
-<li>Waypoint: Using typeof</li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Use-the-Javascript-Console">Waypoint: Use the Javascript Console</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Using-typeof">Waypoint: Using typeof</a></li>
 </ol>
 
 <h2>
