Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -48,6 +48,19 @@
 <p><a href="https://github.com/Rafase282">Github</a> | <a href="http://www.freecodecamp.com/rafase282">FreeCodeCamp</a> |  <a href="http://codepen.io/Rafase282/">CodePen</a> | <a href="https://www.linkedin.com/in/rafase282">LinkedIn</a> | <a href="https://rafase282.wordpress.com/">Blog/Site</a> | <a href="mailto:rafase282@gmail.com">E-Mail</a></p>
 
 <h2>
+<a id="get-started-with-free-code-camp" class="anchor" href="#get-started-with-free-code-camp" aria-hidden="true"><span class="octicon octicon-link"></span></a>Get Started with Free Code Camp</h2>
+
+<ol>
+<li>Waypoint: Learn how Free Code Camp Works Incomplete</li>
+<li>Waypoint: Create a GitHub Account and Join our Chat Rooms Incomplete</li>
+<li>Waypoint: Configure your Public Profile Incomplete</li>
+<li>Waypoint: Try our Wiki and Camper News Incomplete</li>
+<li>Waypoint: Join a Campsite in Your City Incomplete</li>
+<li>Waypoint: Join our Alumni Network and Commit to Your Goal Incomplete</li>
+<li>Waypoint: Learn What to Do If You Get Stuck</li>
+</ol>
+
+<h2>
 <a id="html5-and-css" class="anchor" href="#html5-and-css" aria-hidden="true"><span class="octicon octicon-link"></span></a>HTML5 and CSS</h2>
 
 <ol>
@@ -359,8 +372,8 @@
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Apply-Angularjs-Directives#filters">Filters</a></li>
 </ul>
 </li>
-<li><a href="">Waypoint: Power Forms with Angular.js</a></li>
-<li><a href="">Waypoint: Customize Angular.js Directives</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Power-Forms-with-Angularjs">Waypoint: Power Forms with Angular.js</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Customize-Angularjs-Directives">Waypoint: Customize Angular.js Directives</a></li>
 <li><a href="">Waypoint: Create Angular.js Services</a></li>
 </ol>
 
