--- a/Basic Front End Development Projects/Portfolio/index.html
+++ b/Basic Front End Development Projects/Portfolio/index.html
@@ -295,6 +295,26 @@
   <!-- The footer -->
   <footer>
     <p>Copyright © Rafael J. Rodriguez 2015. All Rights Reserved</p>
+    <p>
+      <a href="mailto:rafase282@gmail.com">
+        <i class="fa fa-envelope fa-fw"></i>
+      </a>
+      <a href="https://github.com/Rafase282" target='_blank'>
+        <i class="fa fa-github fa-fw"></i>
+      </a>
+      <a href="https://www.linkedin.com/in/rafase282" target='_blank'>
+        <i class="fa fa-linkedin"></i>
+      </a>
+      <a href="http://codepen.io/Rafase282" target='_blank'>
+        <i class="fa fa-codepen"></i>
+      </a>
+      <a href="https://rafase282.wordpress.com/" target='_blank'>
+        <i class="fa fa-wordpress"></i>
+      </a>
+      <a href="http://www.freecodecamp.com/rafase282" target='_blank'>
+      (<i class="fa fa-fire fa-fw"></i>)
+    </a>
+      <p>
   </footer>
 </body>
 
