--- a/Basic Front End Development Projects/Pomodoro Clock v2/index.html
+++ b/Basic Front End Development Projects/Pomodoro Clock v2/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Pomodoro Clock v2</title>
+  <title>Pomodoro Timer</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel='stylesheet prefetch' href='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css'>
   <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css'>
@@ -15,7 +15,7 @@
   <section class='container-fluid'>
     <div class="row">
       <div class="col-xs-12">
-        <h1 class='text-primary'>Pomodoro Clock V2!</h1>
+        <h1 class='text-primary'>Pomodoro Timer!</h1>
       </div>
     </div>
 
@@ -59,6 +59,26 @@
 
   <footer>
     <p>Copyright © Rafael J. Rodriguez 2015. All Rights Reserved</p>
+    <p>
+      <a href="mailto:rafase282@gmail.com">
+        <i class="fa fa-envelope fa-fw"></i>
+      </a>
+      <a href="https://github.com/Rafase282" target='_blank'>
+        <i class="fa fa-github fa-fw"></i>
+      </a>
+      <a href="https://www.linkedin.com/in/rafase282" target='_blank'>
+        <i class="fa fa-linkedin"></i>
+      </a>
+      <a href="http://codepen.io/Rafase282" target='_blank'>
+        <i class="fa fa-codepen"></i>
+      </a>
+      <a href="https://rafase282.wordpress.com/" target='_blank'>
+        <i class="fa fa-wordpress"></i>
+      </a>
+      <a href="http://www.freecodecamp.com/rafase282" target='_blank'>
+      (<i class="fa fa-fire fa-fw"></i>)
+    </a>
+      <p>
   </footer>
 
   <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
