--- a/Basic Front End Development Projects/Twitch Status/index.html
+++ b/Basic Front End Development Projects/Twitch Status/index.html
@@ -55,7 +55,27 @@
   </section>
   <!-- The footer -->
   <footer>
-    Copyright © Rafael J. Rodriguez 2015. All Rights Reserved
+    <p>Copyright © Rafael J. Rodriguez 2015. All Rights Reserved</p>
+    <p>
+      <a href="mailto:rafase282@gmail.com">
+        <i class="fa fa-envelope fa-fw"></i>
+      </a>
+      <a href="https://github.com/Rafase282" target='_blank'>
+        <i class="fa fa-github fa-fw"></i>
+      </a>
+      <a href="https://www.linkedin.com/in/rafase282" target='_blank'>
+        <i class="fa fa-linkedin"></i>
+      </a>
+      <a href="http://codepen.io/Rafase282" target='_blank'>
+        <i class="fa fa-codepen"></i>
+      </a>
+      <a href="https://rafase282.wordpress.com/" target='_blank'>
+        <i class="fa fa-wordpress"></i>
+      </a>
+      <a href="http://www.freecodecamp.com/rafase282" target='_blank'>
+      (<i class="fa fa-fire fa-fw"></i>)
+    </a>
+      <p>
   </footer>
   <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
   <script src='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js'></script>
