--- a/Intermediate Front End Development Projects/Camper News/index.html
+++ b/Intermediate Front End Development Projects/Camper News/index.html
@@ -16,6 +16,9 @@
   <section>
     <h1>FreeCodeCamp</h1>
     <h2>Camper News</h2>
+    <div>
+      <ul class="list"></ul>
+    </div>
   </section>
   <footer>
     <p>Copyright © Rafael J. Rodriguez 2015. All Rights Reserved</p>
