--- a/Intermediate Front End Development Projects/Camper News/index.html
+++ b/Intermediate Front End Development Projects/Camper News/index.html
@@ -8,7 +8,6 @@
   <link rel='stylesheet prefetch' href='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css'>
   <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css'>
   <link rel="stylesheet" href="css/style.css">
-
 </head>
 
 <body>
@@ -38,12 +37,13 @@
         <i class="fa fa-wordpress"></i>
       </a>
       <a href="http://www.freecodecamp.com/rafase282" target='_blank'>
-      (<i class="fa fa-fire fa-fw"></i>)
-    </a>
-      <p>
+    (<i class="fa fa-fire fa-fw"></i>)
+  </a>
+    </p>
   </footer>
   <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
   <script src='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js'></script>
+  <script src='http://www.datejs.com/build/date.js'></script>
   <script src="js/index.js"></script>
 
 </body>
