--- a/Basic Front End Development Projects/Portfolio/index.html
+++ b/Basic Front End Development Projects/Portfolio/index.html
@@ -137,8 +137,8 @@
               <img src="http://i.imgur.com/ICz7uDv.png" alt="Random Quotes">
               <h2 class="gray-text">Random Quote Generator</h2>
             </a>
-            <p class="gray-text">This site will display random quotes using the <a href="http://forismatic.com/" target="_blank" style="color: orange">Forismatic</a> API. You will then have the option to tweet it and share with others. You might need to edit the the post
-              before summiting as some quotes will go over the limit.</p>
+            <p class="gray-text">This site will display random quotes using the <a href="http://forismatic.com/" target="_blank" style="color: orange">Forismatic</a> API. You will then have the option to tweet it and share with others. You might need to edit the post before
+              summiting as some quotes will go over the limit.</p>
             <p class="gray-text">
               <strong>Technologies used:</strong> HTML5, CSS3, Boostrap3, jQuery2</p>
           </div>
@@ -149,9 +149,9 @@
               <img src="http://i.imgur.com/NVnCJK9.jpg" alt="Local Weather">
               <h2 class="gray-text">Local Weather App</h2>
             </a>
-            <p class="gray-text">This site will get your location from your IP adress using the <a href="http://ip-api.com" target="_blank" style="color: orange">IP-API.com</a> API. The use that information to get the current weather and other basic infomration using the
-              <a href="http://openweathermap.org/" target="_blank" style="color: orange">OpenWeatherMap</a> API. The user has the option to display the weather and wind speed using the Metric or Imperial system. It also changes backgroudn image depending
-              onthe temperature.</p>
+            <p class="gray-text">This site will get your location from your IP address using the <a href="http://ip-api.com" target="_blank" style="color: orange">IP-API.com</a> API. The use that information to get the current weather and other basic information using the
+              <a href="http://openweathermap.org/" target="_blank" style="color: orange">OpenWeatherMap</a> API. The user has the option to display the weather and wind speed using the Metric or Imperial system. It also changes background image depending
+              on the temperature.</p>
             <p class="gray-text">
               <strong>Technologies used:</strong> HTML5, CSS3, Boostrap3, jQuery2</p>
           </div>
@@ -162,9 +162,9 @@
               <img src="http://i.imgur.com/zSS2lMC.png" alt="Pomodoro Timer">
               <h2 class="gray-text">Pomodoro Timer</h2>
             </a>
-            <p class="gray-text">This web app is great for productivity, it can sit in any corner of your screen, there is not even the need to keep it in view. Once you set the amount of time you want to work and how long you want to rest for, then just let it run and it
-              will keep looking until you stop it. You are also able to pause it in case you have to step aside from your work for a brief moment. It has a nice progression animation to let you know how much time you have left and the break and work progress
-              animation have different color to help you figure out in which one you should be if needed.</p>
+            <p class="gray-text">This web app is great for productivity, it can sit in any corner of your screen, and there is not even the need to keep it in view. Once you set the amount of time you want to work and how long you want to rest for, then just let it run and
+              it will keep looking until you stop it. You are also able to pause it in case you have to step aside from your work for a brief moment. It has a nice progression animation to let you know how much time you have left and the break and work
+              progress animation have different color to help you figure out in which one you should be if needed.</p>
             <p class="gray-text">
               <strong>Technologies used:</strong> HTML5, CSS3, Boostrap3, jQuery2, Canvas</p>
           </div>
@@ -186,14 +186,14 @@
       <div class="row">
         <div class="col-md-3">
           <div class="well">
-            <a href="http://codepen.io/Rafase282/full/yNmerP/" class="thumbnail" target='_blank'>
-              <img src="http://i.imgur.com/ICz7uDv.png" alt="Random Quotes">
-              <h2 class="gray-text">Random Quote Generator</h2>
+            <a href="http://codepen.io/Rafase282/full/xwqrro/" class="thumbnail" target='_blank'>
+              <img src="http://i.imgur.com/ADwiUKn.png" alt="Random Quotes">
+              <h2 class="gray-text">FCC Camper News</h2>
             </a>
-            <p class="gray-text">This site will display random quotes using the <a href="http://forismatic.com/" target="_blank" style="color: orange">Forismatic</a> API. You will then have the option to tweet it and share with others. You might need to edit the the post
-              before summiting as some quotes will go over the limit.</p>
+            <p class="gray-text">This web app displays the hottes news from <a href="http://freecodecamp.com/news" target="_blank" style="color: orange">FreeCodeCamp</a> news. You have will see the username, the date it was posted, how many upvotes and the original link to
+              the article. </p>
             <p class="gray-text">
-              <strong>Technologies used:</strong> HTML5, CSS3, Boostrap3, jQuery2</p>
+              <strong>Technologies used:</strong> HTML5, CSS3, Boostrap3, jQuery2, Datejs</p>
           </div>
         </div>
         <div class="col-md-3">
@@ -312,8 +312,8 @@
         <i class="fa fa-wordpress"></i>
       </a>
       <a href="http://www.freecodecamp.com/rafase282" target='_blank'>
-      (<i class="fa fa-fire fa-fw"></i>)
-    </a>
+    (<i class="fa fa-fire fa-fw"></i>)
+  </a>
       <p>
   </footer>
 </body>
