--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
 
 <ol>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Zipline-Stylize-Stories-on-Camper-News">Zipline: Stylize Stories on Camper News</a></li>
-<li>Zipline: Wikipedia Viewer</li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Zipline-Build-a-Wikipedia-Viewer">Zipline: Wikipedia Viewer</a></li>
 <li>Zipline: Build a JavaScript Calculator</li>
 <li>Zipline: Build a Tic Tac Toe Game</li>
 <li>Zipline: Build a Simon Game</li>
