Forgot to update the html

--- a/Intermediate Front End Development Projects/Wikipedia Viwer/index.html
+++ b/Intermediate Front End Development Projects/Wikipedia Viwer/index.html
@@ -20,6 +20,8 @@
           <input name="search" id="search" type="search">
         </p>
       </article>
+      <article class="results">
+      </article>
     </div>
   </section>
   <footer>
