--- a/Intermediate Front End Development Projects/Wikipedia Viwer/index.html
+++ b/Intermediate Front End Development Projects/Wikipedia Viwer/index.html
@@ -20,8 +20,13 @@
           <input name="search" id="search" type="search">
         </p>
       </article>
-      <article class="results">
-      </article>
+      <article class="random">
+        <a href="https://en.wikipedia.org/wiki/Special:Random" target="_blank">
+          <button type="button" class="btn btn-primary">Random Article!</button>
+        </a>
+        </articles>
+        <article class="results">
+        </article>
     </div>
   </section>
   <footer>
